--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,51 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.7.10</version>
+		<scope>compile</scope>
+    </dependency>
+
+	<dependency>
+		<groupId>uk.org.lidalia</groupId>
+		<artifactId>lidalia-slf4j-ext</artifactId>
+		<version>1.0.0</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>4.4</version>
+		<scope>compile</scope>
+	</dependency>
+
+	<dependency>
+		<groupId>com.sleepycat</groupId>
+		<artifactId>je</artifactId>
+		<version>5.0.73</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.apache.tika</groupId>
+		<artifactId>tika-parsers</artifactId>
+		<version>1.5</version>
+	</dependency>
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>1.0.13</version>
+	</dependency>
 	</dependencies>
+	<repositories>
+		<repository>
+			<id>oracleReleases</id>
+			<name>Oracle Released Java Packages</name>
+			<url>http://download.oracle.com/maven</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
 	<build>
 		<finalName>tristan</finalName>
 		<plugins>
@@ -150,4 +194,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 </project>
