--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,6 +4,7 @@ mongodb.password=
 mongodb.host=70.187.178.194
 mongodb.port=27017
 mongodb.db=cs221_tokens
+mongodb.db2=cs221_rawpages
 #mongodb.host=127.0.0.1
 #mongodb.port=27017
 #mongodb.db=test
