remove unwanted files

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 #
 mongodb.username=
 mongodb.password=
-mongodb.host=70.187.178.194
-mongodb.port=27017
+mongodb.host=ramon-limon.ics.uci.edu
+mongodb.port=8888
 mongodb.db=cs221_tokens
 mongodb.db2=cs221_rawpages
 #mongodb.host=127.0.0.1
